# slurmtrain

./: LICENSE  README.md  pyproject.toml  requirements.txt
slurmtrain/: .slurmtrain.py.swp  __init__.py  slurmtrain.py  test_slurmtrain.py
